@@ -28,6 +28,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly('org.mapstruct:mapstruct:1.3.0.Final')
     annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
     compile group: 'org.springframework', name: 'spring-aop', version: '5.1.8.RELEASE'
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.4'
 }
@@ -39,4 +40,8 @@ compileJava {
 
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
 }
